--- a/systemd/sd-networkd-wg-ddns.conf
+++ b/systemd/sd-networkd-wg-ddns.conf
@@ -1,3 +1,4 @@
+# SPDX-License-Identifier: AGPL-3.0-or-later
 # Please set netdev names that has DynDNS endpoints to the args, e.g.:
 #   SD_NETWORKD_WG_DDNS_ARGS="30-wireguard-company 40-wireguard-personal"
 # Please set interval in the args if don't like the default 10 seconds interval, e.g.:
