systemd: allow restart

--- a/systemd/sd-networkd-wg-ddns.service
+++ b/systemd/sd-networkd-wg-ddns.service
@@ -10,6 +10,8 @@ Wants=systemd-networkd.service network-online.target
 [Service]
 EnvironmentFile=/etc/conf.d/sd-networkd-wg-ddns
 ExecStart=/usr/bin/sd-networkd-wg-ddns $SD_NETWORKD_WG_DDNS_ARGS
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
